--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
+$yanone: 'Yanone Kaffeesatz', sans-serif;
+$menu-width: 35px;
+
 html, body {
     margin: 0;
+    width: 100%;
+    height: 100%;
 
     a {
         text-decoration: none;
@@ -10,14 +16,14 @@ header {
     padding: 2em;
 
     .menu-btn {
-        width: 50px;
+        width: $menu-width;
         float: right;
         cursor: pointer;
     }
 
     .logo {
         width: 8vw;
-        min-width: 65p;
+        min-width: 70px;
     }
 }
 
@@ -26,13 +32,19 @@ section {
 
     h1 {
         font-size: 4em;
-        margin: 1em auto;
+        margin: auto;
+        margin-left: 2.5em;
         width: 70%;
+        font-family: $yanone;
 
         &::before {
-            content: " ";
-            border-top: 5px solid #f00;
+            content: "Ericsson Tsao";
+            color: turquoise;
+            border-bottom: 5px solid aqua;
+            // border-color: linear-gradient(90deg, rgb(184, 202, 187));
             display: block;
+            margin-bottom: 25px;
+            font-size: 3em;
         }
     }
 }
@@ -40,15 +52,17 @@ section {
 nav {
     position: absolute;
     background: black;
+    right: 0;
     padding: 2em;
-    width: calc(100% - 4em);
+    // width: calc(100% - 4em);
+    width: 20%;
     height: calc(100vh - 4em);
     display: none;
     transform: scaleX(0);
-    transform-origin: right;
+    transform-origin: 100%;
 
     .close-btn {
-        width: 50px;
+        width: $menu-width;
         float: right;
         cursor: pointer;
         opacity: 0;
@@ -59,7 +73,8 @@ nav {
         margin: 10% auto 0 auto;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: auto;
+        grid-template-rows: repeat(4, auto);
         width: 80%;
 
         li {
@@ -108,6 +123,8 @@ nav {
 
 footer {
     text-align: center;
+    width: 100%;
+    margin-top: 100px;
 
     .social-media {
         display: flex;
@@ -124,11 +141,10 @@ footer {
         img {
             width: 60px;
         }
+    }
 
-        p {
-            position: relative;
-            bottom: 0;
-        }
+    p {
+        margin: 3em;
     }
 }
 
@@ -164,14 +180,16 @@ footer {
 
 @media only screen and (max-width: 600px) {
     nav {
+        width: calc(100% - 4em);
+
         ul {
-            grid-template-columns: repeat(2, auto);
-            grid-template-rows: repeat(2, auto);
+            grid-template-columns: auto;
+            grid-template-rows: repeat(4, auto);
             width: 90%;
         }
 
         li {
-            margin: 10px;
+            margin: 25px;
         }
 
         
@@ -196,6 +214,7 @@ footer {
 
     footer {
         text-align: center;
+        margin-top: 35px;
 
         .social-media {
             display: flex;
@@ -212,6 +231,10 @@ footer {
             img {
                 width: 40px;
             }
+        }
+
+        p {
+            font-size: 10px;
         }
     }
 }
