--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ nav {
   background: black;
   right: 0;
   padding: 2em;
+  font-size: 36px;
   width: 20%;
   height: calc(100vh - 4em);
   display: none;
@@ -81,6 +82,7 @@ nav ul {
 
 nav ul li {
   opacity: 0;
+  margin-top: 30px;
 }
 
 nav ul a {
@@ -226,6 +228,7 @@ footer p {
 @media only screen and (max-width: 600px) {
   nav {
     width: calc(100% - 4em);
+    font-size: 20px;
   }
   nav ul {
     -ms-grid-columns: auto;
@@ -235,7 +238,7 @@ footer p {
     width: 90%;
   }
   nav li {
-    margin: 25px;
+    margin: 22px;
   }
   nav .close-btn {
     width: 20px;
