--- a/css/main.scss
+++ b/css/main.scss
@@ -54,7 +54,7 @@ nav {
     background: black;
     right: 0;
     padding: 2em;
-    // width: calc(100% - 4em);
+    font-size: 36px;
     width: 20%;
     height: calc(100vh - 4em);
     display: none;
@@ -79,6 +79,7 @@ nav {
 
         li {
             opacity: 0;
+            margin-top: 30px;
         }
 
         a {
@@ -181,6 +182,7 @@ footer {
 @media only screen and (max-width: 600px) {
     nav {
         width: calc(100% - 4em);
+        font-size: 20px;
 
         ul {
             grid-template-columns: auto;
@@ -189,7 +191,7 @@ footer {
         }
 
         li {
-            margin: 25px;
+            margin: 22px;
         }
 
         
