--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz");
 html, body {
   margin: 0;
-  width: 100%;
-  height: 100%;
 }
 
 html a, body a {
@@ -11,6 +9,12 @@ html a, body a {
 
 header {
   padding: 2em;
+}
+
+header h1 {
+  margin: auto;
+  color: #c71414;
+  font-weight: bolder;
 }
 
 header .menu-btn {
@@ -22,6 +26,11 @@ header .menu-btn {
 header .logo {
   width: 8vw;
   min-width: 70px;
+}
+
+header .logo:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 section {
@@ -51,7 +60,7 @@ nav {
   right: 0;
   padding: 2em;
   font-size: 36px;
-  width: 20%;
+  width: 15%;
   height: calc(100vh - 4em);
   display: none;
   -webkit-transform: scaleX(0);
@@ -132,7 +141,7 @@ nav ul span {
 footer {
   text-align: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 footer .social-media {
@@ -157,6 +166,319 @@ footer .social-media img {
 
 footer p {
   margin: 3em;
+}
+
+.project-demo-frame {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-main {
+  text-align: center;
+}
+
+.about-main p {
+  font-size: 24px;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+}
+
+/* common styles !!!YOU DON'T NEED THEM  */
+.container {
+  width: 950px;
+  margin: 50px auto 0px auto;
+  text-align: center;
+}
+
+h1 {
+  margin: 0;
+  font-weight: 400;
+  font-size: 35px;
+}
+
+h1 span {
+  font-family: 'Mali', cursive;
+  font-weight: bold;
+  color: #7A306C;
+}
+
+.link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80%;
+  margin: 30px auto 0;
+}
+
+.link a {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 20px;
+  font-size: 17px;
+  color: #1f1f1f;
+  text-decoration: none;
+}
+
+.link a:last-child {
+  margin-right: 0;
+}
+
+.link a:hover {
+  color: #7A306C;
+}
+
+.link a i {
+  color: #7A306C;
+  margin-right: 5px;
+}
+
+.content-block {
+  margin-top: 50px;
+}
+
+.content-block h2 {
+  margin-bottom: 30px;
+}
+
+.content-block__effect {
+  margin-bottom: 50px;
+}
+
+/* effects styles !!!YOU NEED THEM */
+/* don't forget to add your own colors and parameters */
+.portfolio-effect {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.portfolio-item {
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 16px;
+  width: 400px;
+  height: 400px;
+}
+
+.portfolio-item img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 200%;
+  max-height: 200%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.portfolio-item__info {
+  position: absolute;
+  top: 7px;
+  left: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: calc(100% - 2 * 7px);
+  height: calc(100% - 2 * 7px);
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.portfolio-item__header {
+  position: relative;
+  margin: 0 0 20px 0;
+  padding: 15px 0;
+  font-size: 32px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.portfolio-item__header:after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  height: 2px;
+  width: 100%;
+  content: '';
+  background-color: #8D909B;
+}
+
+.portfolio-item__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.portfolio-item__link-block {
+  position: relative;
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+}
+
+.portfolio-item__link-block:last-child {
+  margin-right: 0;
+}
+
+.portfolio-item__link {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #101010;
+  text-decoration: none;
+  border: 1px solid #101010;
+  border-radius: 50%;
+}
+
+.portfolio-item__link:hover {
+  color: #fff;
+  background-color: #101010;
+}
+
+/* EFFECT #1 STYLES */
+.portfolio-item--eff1 .portfolio-item__info {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: 0;
+}
+
+.portfolio-item--eff1 .portfolio-item__header {
+  top: -10px;
+  opacity: 0;
+}
+
+.portfolio-item--eff1 .portfolio-item__header:after {
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+
+.portfolio-item--eff1 .portfolio-item__link-block {
+  top: 20px;
+  opacity: 0;
+}
+
+.portfolio-item--eff1:hover .portfolio-item__info {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+}
+
+.portfolio-item--eff1:hover .portfolio-item__header {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0.45s;
+          transition-delay: 0.45s;
+  top: 0;
+  opacity: 1;
+}
+
+.portfolio-item--eff1:hover .portfolio-item__header:after {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.63, 0.01, 0, 1.39);
+          transition-timing-function: cubic-bezier(0.63, 0.01, 0, 1.39);
+  -webkit-transition-delay: 0.65s;
+          transition-delay: 0.65s;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.portfolio-item--eff1:hover .portfolio-item__link-block {
+  top: 0;
+  opacity: 1;
+}
+
+.portfolio-item--eff1:hover .portfolio-item__link-block:first-child {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0.85s;
+          transition-delay: 0.85s;
+}
+
+.portfolio-item--eff1:hover .portfolio-item__link-block:nth-child(2) {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-delay: 0.95s;
+          transition-delay: 0.95s;
 }
 
 @-webkit-keyframes slide-menu {
@@ -229,6 +551,8 @@ footer p {
   nav {
     width: calc(100% - 4em);
     font-size: 20px;
+    height: 728.69px;
+    z-index: 10000;
   }
   nav ul {
     -ms-grid-columns: auto;
@@ -245,6 +569,10 @@ footer p {
   }
   header .menu-btn {
     width: 20px;
+  }
+  header .logo:hover {
+    -webkit-transform: none;
+            transform: none;
   }
   section h1 {
     font-size: 1.8em;
